# IoT_Graduate

./: .gitignore  CONFIG_ANALYSIS.md  IMPLEMENT.md  README.md  README_0.md  dff_diagrams.py  main.py  requirements.txt  setup_system.sh  speed_gui.py  test_dff_performance.py  test_webrtc.py
Camera/: Dockerfile  docker-compose.yml  generate-compose.sh  start.sh
Edge/: .gitignore  README.md  dict copy.txt  health_agent.py  main.py  requirements.txt  speed_gui.py
Edge/configs/: cameras.yml  config_cam_rtsp.txt  config_infer_primary_yolo11.txt  config_infer_secondary_lpd.txt  config_infer_secondary_lpr.txt  config_nvdsanalytics.txt  config_tracker_lpd.yml  edge_node.yml  points_rtsp.yml
Edge/models/: RVRT.engine  convert_pt.py
Edge/speedflow_cpp/: build.sh  pipeline_cpp.py
Edge/speedflow_cpp/include/: gst_speedflow.h  speed_calculator.h
Edge/speedflow_cpp/src/: image_enhancer.cpp
Edge/speedflow_python/: __init__.py  analytics.py  camera_config.py  common.py  core_pipeline.py  draw.py  io_utils.py  mqtt_publisher.py  mqtt_subscriber.py  plate_preprocessor.py  probes.py  run_python.py  settings.py  webrtc_client.py
Edge/webrtc/: README.md  index.html  signaling_server.py
Master/: master_orchestrator.py  mosquitto.conf  mqtt_bridge.py  orchestrator.yml
Master/webrtc/: README.md  index.html  signaling_server.py
configs/: config_cam.txt  config_infer_primary_yolo11.txt  config_infer_secondary_lpd.txt  config_infer_secondary_lpr.txt  config_nvdsanalytics.txt  labels_lpr.txt  points_1.yml  points_2.yml  points_3.yml  points_source_target.yml
configs/nvdsinfer_custom_impl_Yolo/: nvdsparsebbox_Yolo.cpp
models/: build_engines.sh
speedflow/: core_pipeline.py  core_pipeline_dff_example.py  deblur.py  dff_optimizer.py  pipeline_webrtc.py  probes.py  settings.py
speedflow_cpp/: CMakeLists.txt  __init__.py  pipeline_cpp.py
speedflow_cpp/include/: gst_speedflow.h  homography.h  image_enhancer.h  plate_associator.h  speed_calculator.h
speedflow_cpp/src/: gst_speedflow.cpp  homography.cpp  metadata_utils.cpp  plate_associator.cpp  speed_calculator.cpp
speedflow_python/: __init__.py  config_txt.py  core_pipeline.py  draw.py  homography.py  plate_preprocessor.py  probes.py  run_python.py  settings.py
webrtc/: index.html  signaling_server.py
